--- a/src/main/webapp/error.xhtml
+++ b/src/main/webapp/error.xhtml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
 </head>
 <body>
 <div style="display: block; text-align: center; color: red; font-size: 25px; font-weight: bold;">
